# data-oriented-example

./: Cargo.toml  README.md
benches/: bench_dyntrait.rs  bench_innercheck.rs  bench_linkedlist.rs  bench_soa.rs  my_benchmark.rs
src/: dyntrait.rs  lib.rs  linked_list.rs  pattern_match.rs  soa.rs
